finish tutorial, CRUD actions on user model w/ ember

--- a/app/assets/javascripts/templates/users/show.hbs
+++ b/app/assets/javascripts/templates/users/show.hbs
@@ -6,4 +6,5 @@
 
 <div class="page-header"></div>
 
+{{#linkTo 'users.edit' this class='btn btn-primary'}}Edit{{/linkTo}}
 {{#linkTo 'users' class='btn'}}Back{{/linkTo}}
